syntax = "proto3";
package myserver;

service ArticleServer {
  rpc QueryArticles(ArticleReq) returns (ArticleListRes){}
  rpc GetArticle(ArticleReq) returns (ArticleRes){}
}

message ArticleReq {
  int64  Id = 1;
  int64 Limit = 2;
}

message Article {
  int64 Id = 1;
  string  Title = 2;
  string  Content  = 3;
}

message ArticleRes {
  bool Success = 1;
  string Msg = 2;
  Article  Article = 3;
}

message ArticleListRes {
  bool Success = 1;
  string Msg = 2;
  repeated  Article  Articles = 3;
}